# jsonVariant

./: .editorconfig  CMakeLists.txt  LICENSE  README.md  jsonVariantConfig.cmake.in
examples/: CMakeLists.txt  deserialization.cpp  serialization.cpp  team.h
include/: jsonVariant.h  jsonVariant.hpp
include/internal/: jsonParser.h  schemaValidator.h
src/: jsonVariant.cpp
src/internal/: jsonParser.cpp  schemaValidator.cpp
test/: CMakeLists.txt  main.cpp  testDeserialization.cpp  testDeserializationTeam.cpp  testDeserializationVeggie.cpp  testJsonSchema.cpp  testSerialization.cpp
